failed to persist, unit testing works

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,6 @@
 jdbc.driverClassName= com.mysql.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQLDialect
+#jdbc.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 jdbc.databaseurl=jdbc:mysql://localhost:3306/redhorse
 jdbc.username=root
 jdbc.password=root
