--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<org.springframework.version>3.1.1.RELEASE</org.springframework.version>
-		<org.hibernate.version>3.5.1-Final</org.hibernate.version>
+		<org.hibernate.version>3.6.9.Final</org.hibernate.version>
 		<log4j.version>1.2.14</log4j.version>
 	</properties>
 	<dependencies>
@@ -154,11 +154,11 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>${org.hibernate.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-annotations</artifactId>
-			<version>${org.hibernate.version}</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.hibernate</groupId> -->
+<!-- 			<artifactId>hibernate-annotations</artifactId> -->
+<!-- 			<version>${org.hibernate.version}</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
@@ -247,6 +247,20 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 			</plugin>
+			<!-- jboss plugin -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jboss-maven-plugin</artifactId>
+				<version>1.5.0</version>
+				<configuration>
+					<jbossHome>/host/jboss/jboss-as-7.1.0.CR1b</jbossHome>
+					<serverName>all</serverName>
+					<fileName>target/hopeapp.war</fileName>
+				</configuration>
+			</plugin>
+
+
+			<!-- jetty plubin -->
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
@@ -366,16 +380,16 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.2</version>
-				
+
 				<configuration>
-				<packagingExcludes>WEB-INF/lib/jsp-api-2.0.jar</packagingExcludes>
+					<packagingExcludes>WEB-INF/lib/jsp-api-2.0.jar</packagingExcludes>
 					<webappDirectory>${webappDirectory}</webappDirectory>
-<!-- 					<warSourceDirectory>war</warSourceDirectory> -->
-<!-- 					<webXml>src/main/webapp/WEB-INF/web.xml</webXml> -->
+					<!-- <warSourceDirectory>war</warSourceDirectory> -->
+					<!-- <webXml>src/main/webapp/WEB-INF/web.xml</webXml> -->
 				</configuration>
 			</plugin>
 		</plugins>
-	<finalName>hopeapp</finalName>
+		<finalName>hopeapp</finalName>
 	</build>
-	
+
 </project>
