--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<org.springframework.version>3.1.1.RELEASE</org.springframework.version>
-		<org.hibernate.version>3.5.1-Final</org.hibernate.version>
+		<org.hibernate.version>4.1.0.Final</org.hibernate.version>
 		<log4j.version>1.2.14</log4j.version>
 	</properties>
 	<dependencies>
@@ -133,6 +133,12 @@
 			<version>${org.springframework.version}</version>
 			<!-- Marhsalling/Unmarhalling XML -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+		
 		<!-- <dependency> -->
 		<!-- <groupId>org.springframework.security</groupId> -->
 		<!-- <artifactId>spring-security-config</artifactId> -->
@@ -144,31 +150,44 @@
 		<!-- <version>3.0.5.RELEASE</version> -->
 		<!-- </dependency> -->
 		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>1.0.3.RELEASE</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
 			<version>2.2.2</version>
 		</dependency>
 		<!-- hibernate default -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.hibernate</groupId> -->
+<!-- 			<artifactId>hibernate-core</artifactId> -->
+<!-- 			<version>${org.hibernate.version}</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>${org.hibernate.version}</version>
+			<artifactId>hibernate-jpamodelgen</artifactId>
+			<version>1.2.0.Final</version>
 		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-annotations</artifactId>
-			<version>${org.hibernate.version}</version>
-		</dependency>
+		
+		
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.hibernate</groupId> -->
+<!-- 			<artifactId>hibernate-annotations</artifactId> -->
+<!-- 			<version>${org.hibernate.version}</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>${org.hibernate.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>4.2.0.Final</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.hibernate</groupId> -->
+<!-- 			<artifactId>hibernate-validator</artifactId> -->
+<!-- 			<version>4.2.0.Final</version> -->
+<!-- 		</dependency> -->
 
 		<dependency>
 			<groupId>org.pojomatic</groupId>
@@ -179,7 +198,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.5.8</version>
+			<version>1.6.4</version>
 		</dependency>
 		<dependency>
 			<groupId>c3p0</groupId>
@@ -247,19 +266,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 			</plugin>
-			<!-- jboss plugin -->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>jboss-maven-plugin</artifactId>
-				<version>1.5.0</version>
-				<configuration>
-					<jbossHome>/host/jboss/jboss-as-7.1.0.CR1b</jbossHome>
-					<serverName>all</serverName>
-					<fileName>target/hopeapp.war</fileName>
-				</configuration>
-			</plugin>
-
-
+			
 			<!-- jetty plubin -->
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
@@ -277,11 +284,11 @@
 					<scanIntervalSeconds>10</scanIntervalSeconds>
 				</configuration>
 				<dependencies>
-					<dependency>
-						<groupId>log4j</groupId>
-						<artifactId>log4j</artifactId>
-						<version>${log4j.version}</version>
-					</dependency>
+<!-- 					<dependency> -->
+<!-- 						<groupId>log4j</groupId> -->
+<!-- 						<artifactId>log4j</artifactId> -->
+<!-- 						<version>${log4j.version}</version> -->
+<!-- 					</dependency> -->
 				</dependencies>
 			</plugin>
 			<plugin>
@@ -383,7 +390,7 @@
 
 				<configuration>
 					<packagingExcludes>WEB-INF/lib/jsp-api-2.0.jar</packagingExcludes>
-					<webappDirectory>${webappDirectory}</webappDirectory>
+<!-- 					<webappDirectory>${webappDirectory}</webappDirectory> -->
 					<!-- <warSourceDirectory>war</warSourceDirectory> -->
 					<!-- <webXml>src/main/webapp/WEB-INF/web.xml</webXml> -->
 				</configuration>
