--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>hope</name>
-	<description>mvc spring version of hope			</description>
+	<description>mvc spring version of hope	</description>
 
 
 	<properties>
@@ -19,12 +19,23 @@
 		<log4j.version>1.2.14</log4j.version>
 	</properties>
 	<dependencies>
+	
+	 <!--  logging  -->
+<!-- 	 	<dependency> -->
+<!-- 			<groupId>org.slf4j</groupId> -->
+<!-- 			<artifactId>slf4j-log4j12</artifactId> -->
+<!-- 			<version>1.6.4</version> -->
+<!-- 		</dependency> -->
+		
+		<!-- json  -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.5.3</version>
 			<!-- Marshalling JSON -->
 		</dependency>
+		
+		<!--  servelts -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
@@ -56,28 +67,7 @@
 			<type>tld</type>
 		</dependency>
 
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>1.5</version>
-		</dependency>
-
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time-jsptags</artifactId>
-			<version>1.0.1</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>jsp-api</artifactId>
-					<groupId>javax.servlet</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>${org.springframework.version}</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
@@ -91,11 +81,14 @@
 			<classifier>sources</classifier>
 			<scope>test</scope>
 		</dependency>
+		
+		<!--  spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 			<version>${org.springframework.version}</version>
 		</dependency>
+				
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
@@ -131,7 +124,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
 			<version>${org.springframework.version}</version>
-			<!-- Marhsalling/Unmarhalling XML -->
+<!-- 			Marhsalling/Unmarhalling XML -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -149,11 +142,11 @@
 		<!-- <artifactId>spring-security-web</artifactId> -->
 		<!-- <version>3.0.5.RELEASE</version> -->
 		<!-- </dependency> -->
-		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-jpa</artifactId>
-			<version>1.0.3.RELEASE</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.data</groupId> -->
+<!-- 			<artifactId>spring-data-jpa</artifactId> -->
+<!-- 			<version>1.0.3.RELEASE</version> -->
+<!-- 		</dependency> -->
 		
 		<dependency>
 			<groupId>cglib</groupId>
@@ -166,11 +159,11 @@
 <!-- 			<artifactId>hibernate-core</artifactId> -->
 <!-- 			<version>${org.hibernate.version}</version> -->
 <!-- 		</dependency> -->
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-jpamodelgen</artifactId>
-			<version>1.2.0.Final</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.hibernate</groupId> -->
+<!-- 			<artifactId>hibernate-jpamodelgen</artifactId> -->
+<!-- 			<version>1.2.0.Final</version> -->
+<!-- 		</dependency> -->
 		
 		
 <!-- 		<dependency> -->
@@ -183,29 +176,47 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>${org.hibernate.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>c3p0</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.1.2</version>
+		</dependency>
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.hibernate</groupId> -->
 <!-- 			<artifactId>hibernate-validator</artifactId> -->
 <!-- 			<version>4.2.0.Final</version> -->
 <!-- 		</dependency> -->
 
+	<!--  utilities -->
 		<dependency>
 			<groupId>org.pojomatic</groupId>
 			<artifactId>pojomatic</artifactId>
 			<version>1.0</version>
 			<!-- equals/hashCode/toString support -->
 		</dependency>
+		
+		
+		
+		
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.6.4</version>
-		</dependency>
-		<dependency>
-			<groupId>c3p0</groupId>
-			<artifactId>c3p0</artifactId>
-			<version>0.9.1.2</version>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>1.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time-jsptags</artifactId>
+			<version>1.0.1</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>jsp-api</artifactId>
+					<groupId>javax.servlet</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+	<!--  db connector -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -230,17 +241,15 @@
 			<version>1.5.4</version>
 		</dependency>
 
+
 		<dependency>
 			<groupId>opensymphony</groupId>
 			<artifactId>sitemesh</artifactId>
 			<version>2.4.2</version>
 		</dependency>
+	
+	<!--  unit test -->
 
-		<dependency>
-			<groupId>net.sf.dozer</groupId>
-			<artifactId>dozer</artifactId>
-			<version>3.3.1</version>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
