with pagination draft

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,9 @@
 		<url-pattern>*.html</url-pattern>
 	</servlet-mapping>
 
+<!-- Enables Spring Security -->
+ 
+    <!--  view filter -->
 	<filter>
 		<filter-name>sitemesh</filter-name>
 		<filter-class>com.opensymphony.module.sitemesh.filter.PageFilter</filter-class>
